fix bug - apigateway doesnt config routes